--- a/lvl7_yana/User_window.xaml
+++ b/lvl7_yana/User_window.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="lvl7_yana.MainWindow"
+﻿<Window x:Class="lvl7_yana.User_window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:lvl7_yana"
         mc:Ignorable="d"
-        Title="MainWindow" MinHeight="450" MinWidth="800" Height="450" Width="800">
+        Title="User_window" Height="450" Width="800" MinHeight="450" MinWidth="800">
     <Grid>
-        <Button x:Name="btnProduct" Height="50" Width="200" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Product" FontSize="20" Background="#FFFF3EB4" Click="btnProduct_Click" />
-        <Frame x:Name="FrameNav"/>
+        <TextBlock Text="Welcome User!" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="40" Foreground="#FF9B31D1" FontFamily="Bell MT" Margin="0,23,0,0"/>
     </Grid>
 </Window>
